<resources>
    <string name="app_name">Carteira de Clientes</string>
    <string name="title_activity_act_main">Carteira de Clientes</string>
    <string name="title_activity_act_cad_cliente">Cliente</string>
    <string name="lbl_cnpj">CNPJ</string>
    <string name="lbl_razao_social">Razão Social</string>
    <string name="lbl_fantasia">Fantasia</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_telefone">Telefone</string>
    <string name="title_menu_ok">OK</string>
    <string name="title_menu_cancelar">Cancelar</string>
    <string name="title_menu_atualizar">Atualizar</string>
    <string name="title_menu_configurar">Configurações</string>
    <string name="title_dialog_aviso">Aviso</string>
    <string name="message_dialog_aviso">Existem campos vazios!</string>
    <string name="lbl_dialog_ok">OK</string>
    <string name="title_activity_act_teste">Teste</string>
    <string name="title_dialog_erro">Erro</string>
    <string name="message_conexao_sucesso">Conexão criada com sucesso</string>
    <string name="title_menu_excluir">Excluir</string>
    <string name="title_dialog_excluir">Excluir</string>
    <string name="lbl_dialog_sim">Sim</string>
    <string name="lbl_dialog_nao">Não</string>
    <string name="message_dialog_excluir">Confirma a exclusão do registro selecionado?</string>
</resources>
