<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutConstraintCliente"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ActCadCliente"
    tools:showIn="@layout/act_cad_cliente">

    <TextView
        android:id="@+id/txtCNPJ"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/lbl_cnpj"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtCNPJ"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/txtCNPJ"
        app:layout_constraintStart_toStartOf="@+id/txtCNPJ"
        app:layout_constraintTop_toBottomOf="@+id/txtCNPJ" />

    <TextView
        android:id="@+id/txtRazaoSocial"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/lbl_razao_social"
        app:layout_constraintEnd_toEndOf="@+id/edtCNPJ"
        app:layout_constraintStart_toStartOf="@+id/edtCNPJ"
        app:layout_constraintTop_toBottomOf="@+id/edtCNPJ" />

    <EditText
        android:id="@+id/edtRazaoSocial"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/txtRazaoSocial"
        app:layout_constraintStart_toStartOf="@+id/txtRazaoSocial"
        app:layout_constraintTop_toBottomOf="@+id/txtRazaoSocial" />

    <TextView
        android:id="@+id/txtFantasia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/lbl_fantasia"
        app:layout_constraintEnd_toEndOf="@+id/edtRazaoSocial"
        app:layout_constraintStart_toStartOf="@+id/edtRazaoSocial"
        app:layout_constraintTop_toBottomOf="@+id/edtRazaoSocial" />

    <EditText
        android:id="@+id/edtFantasia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/txtFantasia"
        app:layout_constraintStart_toStartOf="@+id/txtFantasia"
        app:layout_constraintTop_toBottomOf="@+id/txtFantasia" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/lbl_email"
        app:layout_constraintEnd_toEndOf="@+id/edtFantasia"
        app:layout_constraintStart_toStartOf="@+id/edtFantasia"
        app:layout_constraintTop_toBottomOf="@+id/edtFantasia" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/txtEmail"
        app:layout_constraintStart_toStartOf="@+id/txtEmail"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <TextView
        android:id="@+id/txtTelefone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/lbl_telefone"
        app:layout_constraintEnd_toEndOf="@+id/edtEmail"
        app:layout_constraintStart_toStartOf="@+id/edtEmail"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

    <EditText
        android:id="@+id/edtTelefone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/txtTelefone"
        app:layout_constraintStart_toStartOf="@+id/txtTelefone"
        app:layout_constraintTop_toBottomOf="@+id/txtTelefone" />

</android.support.constraint.ConstraintLayout>